acceptance/tests/fixtures/cases/api-gateways/header-match-invert/gatewayclass.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: header-invert-class
spec:
  controllerName: "consul.hashicorp.com/gateway-controller"
  parametersRef:
    group: consul.hashicorp.com
    kind: GatewayClassConfig
    name: header-invert-class-config
