acceptance/tests/fixtures/cases/api-gateways/header-match-invert/kustomization.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
- ../../static-server-inject
- gatewayclassconfig.yaml
- gatewayclass.yaml
- gateway.yaml
- filters.yaml
- httproute.yaml
